--- a/meson.build
+++ b/meson.build
@@ -2,8 +2,10 @@ project('nanosh', 'c',
   version : '0.1',
   default_options : ['warning_level=3'])
 
+readline = dependency('readline', required : true)
+
 executable('nanosh',
            'src/sh.c',
-           'src/io.c',
            'src/str.c',
+           dependencies : readline,
            install : true)
